--- a/layout.yml
+++ b/layout.yml
@@ -21,30 +21,51 @@ box:
   width: 600
   align: 'center'
 
-# Ally
 icon:
   extends: bleed
-  x: += 37.5
-  y: += 20
-  width: 180
-  height: 180
+  x: += 28.125
+  y: += 28.125
+  width: 206.25
+  height: 206.25
 
 cube:
   width: 112.5
   height: 112.5
 
+cube_large:
+  extends: cube
+  width: += 75
+  height: += 75
+
 cube_cost:
   extends: cube
   align: 'center'
+
+cube_cost_large:
+  extends: cube_cost
+  width: += 75
+  height: += 75
+  font_size: 24
 
 shield:
   x: 562.5
   width: 112.5
   height: 112.5
 
+shield_large:
+  extends: shield
+  width: += 75
+  height: += 75
+
 shield_text:
   extends: shield
   align: 'center'
+
+shield_text_large:
+  extends: shield_text
+  width: += 75
+  height: += 75
+  font_size: 24
 
 title:
   extends: box
